# VibeWatch

./: .gitignore  README.md  garmin_gen.py  pyproject.toml  session.md  task.md
scripts/: generate_demo.py
templates/: index.html
